--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -22,9 +22,6 @@
   }
 }
 
-.react-tabs {
-  width: 100%;
-}
 
 .tabs-list {
   display: flex;
@@ -33,10 +30,10 @@
   padding: 0;
   margin: 0;
   list-style-type: none;
+  font-size: 1.6rem;
 }
 
 .shopify-tab {
-    font-size: 2rem;
     color: $shopifyGreen;
     
     span {
@@ -45,7 +42,6 @@
 }
 
 .full-stack-tab {
-  font-size: 2rem;
   color: $fullStackBlue;
 
   span {
@@ -56,6 +52,7 @@
 .cards {
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 
 .proj-cards {
